web/css/sidebar-panel.css
.toggleButtonHolder {
  position: relative;
}

.accordionToggler {
  overflow: hidden;
  z-index: 1;
  height: 28px;
  width: 28px;
  background: none no-repeat scroll left;
}
.toggleIconHolder {
  position: absolute;
  right: 6px;
  height: 30px;
  width: 30px;
  border: 1px solid transparent;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}
.atcollapse {
  position: absolute;
  background: url("../images/icon-sprite.svg") -206px -3px;
  border-radius: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  border-right: 0;
}
.toggleIconHolder:hover {
  background: rgba(220, 220, 220, 1);
}
.toggleIconHolder:hover .atcollapse {
  background-position: -206px -63px;
}
a.staticLayers:not([href]):not([tabindex]) {
  float: left;
  left: 10px;
  position: absolute;
  top: 67px;
  height: auto;
  background: rgba(40, 40, 40, 0.85);
  border-radius: 0;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -o-box-sizing: border-box;
  width: 286px;
  margin: 0;
  border: 1px solid #333;
  cursor: pointer;
  padding: 7px 0;
  text-align: center;
  color: #fff;
}

a.staticLayers:not([href]):not([tabindex]):hover {
  background-color: #ccc;
  color: rgb(40, 40, 40);
}

a.staticLayers::after {
  position: absolute;
  content: "";
  height: 20px;
  width: 20px;
  background: url("../images/icon-sprite.svg") -180px -10px;
  display: block;
  right: 10px;
  top: 6px;
}

a.staticLayers:hover::after {
  background-position: -180px -70px;
}

a.atexpand {
  background: url("../images/icon-sprite.svg") -175px 0;
}

.sidebar-panel {
  color: #222;
}

.sidebar-panel h1,
.sidebar-panel h2,
.sidebar-panel h3,
.sidebar-panel h4 {
  margin: 0;
  padding: 0;
  color: #000;
  font-weight: 400;
}

.sidebar-panel h2 {
  font-size: 1.4em;
  display: inline-block;
  float: left;
  color: #fff;
  border: none;
  padding: 9px 30px;
}

.sidebar-panel .tabContainer {
  border-bottom: 2px #005190 solid;
}

.sidebar-panel h3 {
  display: block;
  color: #fff;
  border: none;
  text-decoration: none;
  background: none;
  padding: 1px 3px;
  font-size: 0.9em;
  margin: 5px 0;
  text-transform: uppercase;
}

.sidebar-panel .category {
  overflow: hidden;
}

.sidebar-panel li.item {
  padding: 0;
  cursor: move;
  margin: 0 auto;
}

.sidebar-panel li.item-static {
  cursor: default;
}

.sidebar-panel li.item-static:hover {
  background: rgba(220, 220, 220, 1);
}

.categoryContainer {
  display: block;
  width: 100%;
  overflow: hidden;
}

.mCustomScrollBox > .mCSB_scrollTools {
  right: -6px;
}

.sidebar-panel li.item a {
  color: #22a;
}

.sidebar-panel li.item a:hover {
  color: #88f;
}

#selectorboxcontent a {
  color: #22a;
}

#selectorboxcontent a:hover {
  color: #88f;
}

.sidebar-panel li.item h4,
.inmotion h4 {
  font-size: 0.9em;
  line-height: 14px;
  padding: 3px 3px 0;
}

.sidebar-panel li.item p,
.inmotion p {
  padding: 0 3px 6px;
  color: #222;
  font-size: 0.8em;
  font-style: italic;
}

li.item span.palette {
  display: block;
  overflow: hidden;
  margin-top: 5px;
  margin-left: 5px;
}

li.item ul.palette li {
  float: left;
}

.sidebar-panel ul.category {
  position: relative;
  overflow: hidden;
}

.sidebar-panel ul.category li h3,
.inmotion h3 {
  display: block;
  clear: both;
  float: none;
}

.layer-metadata.overflow {
  height: 40px;
  overflow: hidden;
}

img.sidebar-panel-item-img {
  display: block;
}

img.hideReg {
  height: 14px;
  width: 20px;
}

.sidebar-panel img.close {
  height: 14px;
  width: 14px;
}

.sidebar-panel-item-img.close {
  opacity: 1;
}

.ui-tabs-hide {
  position: absolute !important;
  left: -999em !important;
}

.jspPane {
  margin-left: 0 !important;
}

.sidebar-panel li.item.productsitem,
li.item.productsitem.inmotion,
.sidebar-panel li.itemstatic {
  padding: 0;
  min-height: 40px;
  list-style: none;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -o-box-sizing: border-box;
  position: relative;
  border: 1px solid transparent;
}

.sidebar-panel li.item.productsitem:hover {
  border-color: #fff;
}

.productsitem a.hdanchor.hideReg {
  width: 30px;
  background-color: #ccc;
  position: absolute;
  top: 0;
  bottom: 0;
  cursor: pointer;
}

.productsitem.layer-visible a.hdanchor:hover {
  background: #fff;
}

.productsitem .layer-eye-icon {
  text-align: center;
  display: inline-block;
  width: 100%;
  position: absolute;
  top: 50%;
  margin-top: -10px;
  font-size: 20px;
  color: #333;
}
.layer-hidden .layer-eye-icon {
  color: #c5c5c8;
}
.productsitem .hdanchor:hover .layer-eye-icon {
  color: #000;
}

.productsitem a.wv-layers-info,
.productsitem a.wv-layers-options {
  position: relative;
  width: 20px;
  height: 20px;
  float: right;
}
.productsitem.inmotion {
  width: 284px;
  list-style: none;
}
.productsitem a.wv-layers-info:hover,
.productsitem a.wv-layers-options:hover {
  background: #fff;
}

.wv-layers-info-icon {
  font-size: 11px !important;
  border: 1px solid #333;
  width: 14px;
  height: 14px;
  text-align: center;
  border-radius: 50%;
  padding-top: 1px;
  margin-top: 3px;
}

i.wv-layers-options-icon {
  background: url("../images/wv.layers/show-hide.png?v=@BUILD_NONCE@") no-repeat
    0 -24px;
  width: 12px;
  height: 12px;
  position: absolute;
  top: 50%;
  margin-top: -6px;
  left: 50%;
  margin-left: -6px;
  background-position: 0 -69px;
}

.productsitem.layer-hidden a.wv-layers-options i.wv-layers-options-icon {
  background-position: -21px -69px;
}

.productsitem.layer-hidden a.wv-layers-options:hover i.wv-layers-options-icon {
  background-position: 0 -69px;
}

.productsitem div.zot {
  margin-left: 31px;
  position: absolute;
  top: 0;
  bottom: 0;
  width: 10px;
  background: #dacf00;
  cursor: default;
  display: none;
}

.productsitem div.zot:hover {
  background: #fff200;
}

.productsitem div.zot b {
  text-align: center;
  height: 20px;
  line-height: 20px;
  position: absolute;
  top: 50%;
  left: 0;
  right: 0;
  margin-top: -10px;
}

.productsitem.zotted div.zot {
  display: block;
}

.productsitem a.button.close {
  display: block;
  float: right;
  width: 20px;
  height: 20px;
  position: relative;
  cursor: pointer;
}

.sidebar-panel li.item.productsitem:hover a.button.close {
  display: block;
}

.productsitem.layer-visible a.button.close:hover {
  background-color: #fff;
}

.productsitem.layer-hidden a.button.close:hover {
  background: #fff;
}

.productsitem a.button.close i {
  background: url("../images/wv.layers/show-hide.png?v=@BUILD_NONCE@") no-repeat
    0 -24px;
  width: 12px;
  height: 12px;
  pointer-events: none;
  position: absolute;
  top: 50%;
  margin-top: -6px;
  left: 50%;
  margin-left: -6px;
}

.productsitem.layer-hidden a.button.close i {
  background-position: -21px -24px;
}

.productsitem.layer-hidden a.button.close:hover i {
  background-position: 0 -24px;
}

.productsitem .layer-main {
  width: auto;
  background-color: #ccc;
  margin-left: 31px;
  cursor: default;
  min-height: 40px;
  overflow: hidden;
}

.productsitem.zotted .layer-main {
  margin-left: 42px;
}

.productsitem.layer-hidden .layer-main,
.productsitem.layer-hidden a.hdanchor {
  background: rgba(255, 255, 255, 0.2);
}

.productsitem.layer-hidden a.hdanchor:hover {
  background: rgba(255, 255, 255, 1);
}

.productsitem.layer-hidden .layer-main h4,
.productsitem.layer-hidden .layer-main p {
  color: #999;
}

.sidebar-panel .layer-main h4,
.inmotion .layer-main h4,
.sidebar-panel .layer-main p {
  padding: 0;
}

.sidebar-panel li.layer-hidden a {
  color: #999;
}

.state-saver {
  background: rgba(220, 220, 0, 0.3);
  height: 42px;
}

.sidebar-panel li.item.productsitem.disabled.layer-hidden:hover {
  border-color: transparent;
}

.disabled.layer-hidden a.hdanchor:hover {
  background: rgba(255, 255, 255, 0.2);
  cursor: default;
}

.productsitem.disabled.layer-hidden a.hdanchor:hover i {
  color: #c5c5c8;
}

